# cube-container

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-binaries.yml
CubeMaster/pkg/templatecenter/: request_validation.go  template_image_test.go
Cubelet/pkg/utils/: strings_test.go
deploy/container-mode/: Caddyfile  Dockerfile  entrypoint.sh
docs/: UNTRUSTED_HOSTING.md
mcp-server/: pyproject.toml
mcp-server-go/: .gitignore  AGENT_GUIDE.md  ARCHITECTURE.md  auth.go  auth_test.go  auth_tokens.go  backend.go  backup.go  backup_test.go  certificates.go  client.go  concurrency_test.go  databases.go  deploy.go  deploy_rollout.go  docker_client.go  e2e_test.go  environments.go  gc.go  go.mod  ha.go  handlers_basic.go  handlers_phase2.go  handlers_secure.go  health.go  hypervisor.go  hypervisor_cloudinit.go  hypervisor_cloudinit_test.go  hypervisor_gpu.go  hypervisor_gpu_test.go  hypervisor_validate.go  hypervisor_validate_test.go  hypervisor_vm_test.go  hypervisor_zfs.go  hypervisor_zfs_test.go  images.go  jobs.go  log_aggregation.go  metal_tools.go  metal_tools_registration.go  (+18 more)
mcp-server/tests/: test_security.py
skills/: backup-strategy.md  database-provisioning.md  deploy-from-scratch.md  environment-lifecycle.md  incident-response.md  multi-node-deployment.md  security-hardening.md  zero-downtime-update.md
