[project]
name = "cube-container-mcp"
version = "0.1.0"
description = "MCP server for controlling Cube Container cluster (AI-agent-managed container orchestration)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]

[project.scripts]
cube-mcp = "cube_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cube_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]  # line length handled by formatter
